--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
           username: ubuntu
           key: ${{ secrets.KEY }}
           script: |
-            sudo docker login ghcr.io -u USERNAME -p ${{ secrets.GITHUB_TOKEN }};
+            sudo echo "${{ secrets.GITHUB_TOKEN }}" | sudo docker login ghcr.io -u ${{ github.actor }} --password-stdin;
             sudo docker-compose pull;
             sudo docker-compose up -d;
             sudo docker system prune -f
